kubernetes/apps/xauth/keycloak/app/keycloak-operator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: keycloak
    app.kubernetes.io/instance: keycloak
  # annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: traefik-external
  # defaultBackend:
  #   service:
  #     name: keycloak-service
  #     port:
  #       name: https
  rules:
    - host: sso.icylair.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  name: https
  tls:
    - hosts:
        - sso.icylair.com
      secretName: icylair-com-sso
